--- a/author.html
+++ b/author.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <body style="background-color:antiquewhite;">
-        <img src="Images/logo.png" alt="This image cannot be displayed." width="150" class="image-center rounded-img"
+        <img src="logo.png" alt="This image cannot be displayed." width="150" class="image-center rounded-img"
         height="150"/>
         <h1 class="name">Kareena NS</h1>
     <div class="popup" onclick="myFunction()">Click Me!
@@ -27,7 +27,7 @@
         <a href="mailto:reena.narinesingh@gmail.com">Email</a>
       </div>
 
-    <img src="Images/books.jpg" alt="This image cannot be displayed." width=100%>
+    <img src="books.jpg" alt="This image cannot be displayed." width=100%>
     <div id ="aboutme">
         <h2 class="abme">About Me</h2>
         <p class="descript">My name is Kareena NS, and I am a 3rd-year undergrad student studying
@@ -42,7 +42,7 @@
             page, you can also find all of my socials.</p>
     </div>
     <p class="ahhh">reena.narinesingh@gmail.com</p>
-    <img src="Images/quote.png" alt="This image cannot be displayed." width=100%>
+    <img src="quote.png" alt="This image cannot be displayed." width=100%>
     <div id ="writingsample">
         <h2 class="abme">Writing Sample</h2>
         <p class = "chapter">How to… Be Rejected 30 Times</p>
