--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="author.html">Writer</a>
       <a href="student.html">Student</a>
     </div>
-    <img src="Images/headshot.jpg" alt="This image cannot be displayed." class="rounded-img image-center"/>
+    <img src="headshot.jpg" alt="This image cannot be displayed." class="rounded-img image-center"/>
     <p class="description">This is my headshot.</p>
     <p class="description">So professional.</p>
     <p class="description">Very cool for doing it myself.</p>
