--- a/student.html
+++ b/student.html
@@ -8,7 +8,7 @@
     <div class="container">
       <div class="image-container">
         <img
-          src="Images/headshottiny.jpg"
+          src="headshottiny.jpg"
           alt="This image cannot be displayed."
           class="rounded-img"
           height="150px"
@@ -33,7 +33,7 @@
     <div class="cont">
       <div class="img-container">
         <img
-          src="Images/seal.png"
+          src="seal.png"
           alt="This image cannot be displayed."
           height="50px"
           width="50px"
@@ -60,7 +60,7 @@
     <div class="cont">
       <div class="img-container">
         <img
-          src="Images/woodland.jpg"
+          src="woodland.jpg"
           alt="This image cannot be displayed."
           height="50px"
           width="50px"
