Adding the logo to index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Kareena NS</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="image/png" href="N.png">
   </head>
   <body>
     <body style="background-color:black;">
