Adding the logo to student.html

--- a/student.html
+++ b/student.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Student</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="N.png">
   </head>
   <body style="background-color: white">
     <div class="container">
