Changed the logo image for the author page.

--- a/author.html
+++ b/author.html
@@ -7,9 +7,10 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
-    <body style="background-color:cornsilk">
+    <body style="background-color:aliceblue">
 
       <nav class="menu">
+        <div class="name">Kareena NS</div>
         <ul>
           <li><a href="#aboutme">About Me</a></li>
           <li><a href="#myDiv">Writing Sample</a></li>
@@ -20,10 +21,9 @@
       </nav>
 
       
-        <img src="logo.png" alt="This image cannot be displayed." width="150" class="image-center rounded-img"
-        height="150"/>
-        <div class="name">Kareena NS</div>
-    <div class="popup" onclick="myFunction()">Click Me!
+      <img src="logo.jpg" alt="This image cannot be displayed." width="150" class="logoimage rounded-img" height="150" onclick="myFunction()" height="150"/>
+      <p class="imageclick">(click on the image above)</p>
+      <div class="popup" onclick="myFunction()">
         <span class="popuptext" id="myPopup">Kareena NS is an aspiring author. Scroll to learn more.</span>
       </div>
       <script>
