Removed the random book library image and added logos for the socials instead of just the names of the socials.

--- a/author.html
+++ b/author.html
@@ -12,6 +12,7 @@
       <nav class="menu">
         <div class="name">Kareena NS</div>
         <ul>
+          <li><a href="">Projects</a></li>
           <li><a href="#aboutme">About Me</a></li>
           <li><a href="#myDiv">Writing Sample</a></li>
           <li><a href="index.html">Main Page</a></li>
@@ -19,8 +20,6 @@
           <li><a href="#bottom">Socials</a>
         </ul>
       </nav>
-
-      
       <img src="logo.jpg" alt="This image cannot be displayed." width="150" class="logoimage rounded-img" height="150" onclick="myFunction()" height="150"/>
       <p class="imageclick">(click on the image above)</p>
       <div class="popup" onclick="myFunction()">
@@ -33,7 +32,13 @@
           popup.classList.toggle("show");
         }
         </script>
-    <img src="books.jpg" alt="This image cannot be displayed." width=100%>
+
+    <div id ="projects">
+      <img src="6.png" alt="This image cannot be displayed." width=100%>
+      <img src="8.png" alt="This image cannot be displayed." width=100%>
+      <img src="9.png" alt="This image cannot be displayed." width=100%>
+      <img src="7.png" alt="This image cannot be displayed." width=100%>
+    </div>
     <div id ="aboutme">
         <h2 class="abme">About Me</h2>
         <p class="descript">My name is Kareena NS, and I am a 3rd-year undergrad student studying
@@ -47,7 +52,10 @@
             any business inquiries, please reach out to me at the email below. At the very bottom of this
             page, you can also find all of my socials.</p>
     </div>
-    <p class="ahhh">reena.narinesingh@gmail.com</p>
+    <p class="ahhh">
+      <a href="mailto:reena.narinesingh@gmail.com">reena.narinesingh@gmail.com
+      </a>
+    </p>
     <img src="quote.png" alt="This image cannot be displayed." width=100%>
     <div id="container2">
       <div id="content">
@@ -128,10 +136,20 @@
     <div id="bottom">
       <h2 class="abme">Socials</h2>
       <div class="linksBottom">
-        <a href="https://www.wattpad.com/user/KareenaNS">Wattpad</a>
-        <a href="https://www.tiktok.com/@kareenans">TikTok</a>
-        <a href="https://www.instagram.com/kareena_ns/">Instagram</a>
-        <a href="https://www.youtube.com/channel/UCMOfdKrU09RVMIxLZHmgVnQ">YouTube</a>
+        <a href="https://www.instagram.com/kns_books/">
+          <img src="1.png" alt="This image cannot be displayed." class="smslogos"/> 
+        </a>
+        <a href="https://www.wattpad.com/user/KareenaNS">
+          <img src="2.png" alt="This image cannot be displayed." class="smslogos"/> 
+        </a>
+        <a href="https://www.youtube.com/channel/UCB5_0GV17GqFb7YtmSkwgkw">
+          <img src="3.png" alt="This image cannot be displayed." class="smslogos"/> 
+        </a>
+        <a href="https://www.tiktok.com/@shethacoolie">
+          <img src="4.png" alt="This image cannot be displayed." class="smslogos"/> 
+        </a>
+
+
       </div>
       <hr class="custom-line">
     </div>
