Fixed the student page and updated resume.

--- a/student.html
+++ b/student.html
@@ -18,14 +18,13 @@
       </div>
       <div class="content-container">
         <h1 class="title">Kareena NS</h1>
-        <p>reena.narinesingh@gmail.com</p>
-        <p>(470)-278-3236</p>
+        <a href="mailto:reena.narinesingh@gmail.com">reena.narinesingh@gmail.com</a>
+        <p></p>
       </div>
     </div>
     <div class="nav">
       <a href="https://www.linkedin.com/in/reena-narine-singh-73b8b2242/"
-        >LinkedIn</a
-      >
+        >LinkedIn</a>
       <a href="index.html">Main Page</a>
       <a href="https://github.com/KareenaNS">GitHub</a>
     </div>
@@ -49,12 +48,10 @@
     <p class="blah">BS in Computer Science</p>
     <ul>
       <li>
-        Relevant Coursework: Object Oriented Programming, Data Structures and
-        Algorithms, Discrete Mathematics, Objects and Design
+        Relevant Coursework: Object Oriented Programming, Data Structures and Algorithms, Discrete Mathematics, Objects and Design, Computer Graphics, Intro to UI/Design, Junior Capstone
       </li>
       <li>
-        Extracurriculars: Caribbean Student Association, VGDev, RUF (Reformed
-        University Fellowship)
+        Extracurriculars: Caribbean Student Association, VGDev, RUF (Reformed University Fellowship), Startup Exchange
       </li>
     </ul>
 
@@ -89,8 +86,7 @@
     <h2 class="subsection">Skills</h2>
     <ul>
       <li>
-        Programming Languages: Python, Java, C, C++, C#, HTML, CSS, Javascript,
-        Assembly
+        Programming Languages: C++, C, C#, Python, Java, Git, Assembly, Javascript, HTML, CSS, Data Structures, Algorithms, GBA Programming, OpenGL
       </li>
       <li>Languages: English, Spanish (proficient)</li>
       <li>
@@ -98,9 +94,34 @@
         copywriting
       </li>
     </ul>
-
     <h2 class="subsection">Projects</h2>
     <ul>
+      <li>
+        <p class="italics">LOST: An app for grieving students (Jan 2024 - Current)</p>
+        <ol>
+          <li>
+            Web/Mobile Developer, founder: Creator of an app with resources for students dealing with loss, as well as an anonymous chat feature.
+          </li>
+        </ol>
+      </li>
+      <li>
+        <p class="italics">Personal Website (June 2023 - Current)</p>
+        <ol>
+          <li>
+            Frontend Developer: Coded a personal website for both my writing and
+            computer science career in HTML, CSS, and some Javascript
+          </li>
+        </ol>
+      </li>
+      <li>
+        <p class="italics">SAITAMA (Systematic Advisory Improvement Tool and Management Assistant) (October 2023)</p>
+        <ol>
+          <li>
+            UI/UX Designer: Created GUI for financial tool redesigning CapitalOne’s credit system.
+          </li>
+          <li>Assisted with an algorithm to create an easier-to-understand credit system from 0-100.</li>
+        </ol>
+      </li>
       <li>
         <p class="italics">Cat and Mouse (Jan - May 2023)</p>
         <ol>
@@ -109,15 +130,6 @@
             playable program in Unity using C#
           </li>
           <li>Narrative Designer: Planned story and plot lines</li>
-        </ol>
-      </li>
-      <li>
-        <p class="italics">Personal Website (June - July 2023)</p>
-        <ol>
-          <li>
-            Frontend Developer: Coded a personal website for both my writing and
-            computer science career in HTML, CSS, and some Javascript
-          </li>
         </ol>
       </li>
       <li>
@@ -148,7 +160,11 @@
     </ul>
 
     <h2 class="subsection">Experience</h2>
-    <p class="college">Publix Supermarkets Inc. (Jul 2022 - Jan 2023)</p>
+    <div class="cont-contain">
+      <a href="https://www.publix.com/locations/547-eagles-landing"
+        >Publix Supermarkets Inc. (Jul 2022 - Jan 2023)</a
+      >
+    </div>
     <p class="blah">Cashier</p>
     <ul>
       <li>
@@ -160,9 +176,11 @@
         experiences
       </li>
     </ul>
-    <p class="college">
-      Families Of Children Under Stress + Fragile (Jun 2018 - Jul 2019)
-    </p>
+    <div class="cont-contain">
+      <a href="https://focus-ga.org/program/summer-day-camps/"
+        >Families Of Children Under Stress + Fragile (Jun 2018 - Jul 2019)</a
+      >
+    </div>
     <p class="blah">Summer Camp Counselor/Volunteer</p>
     <ul>
       <li>Offered guidance in group and camp-wide activities.</li>
