Changed links on the author page.

--- a/OneDrive/Documents/Website!/author.html
+++ b/OneDrive/Documents/Website!/author.html
@@ -97,9 +97,9 @@
     <hr class="custom-line">
     <h2 class="abme">Socials</h2>
     <div class="bottom">
-      <a href="https://www.wattpad.com/user/KareenaNS">Wattpad</a>
-      <a href="https://www.tiktok.com/@kareenans">TikTok</a>
-      <a href="https://www.instagram.com/kareena_ns/">Instagram</a>
+      <a href="https://www.wattpad.com/user/reena-ns">Wattpad</a>
+      <a href="https://www.tiktok.com/@reenanswrites">TikTok</a>
+      <a href="https://www.instagram.com/reenans_writes/">Instagram</a>
       <a href="https://www.youtube.com/channel/UCMOfdKrU09RVMIxLZHmgVnQ">YouTube</a>
     </div>
   </body>
