--- a/author.html
+++ b/author.html
@@ -136,16 +136,16 @@
     <div id="bottom">
       <h2 class="abme">Socials</h2>
       <div class="linksBottom">
-        <a href="https://www.instagram.com/kns_books/">
+        <a href="https://www.instagram.com/reenans_writes/">
           <img src="1.png" alt="This image cannot be displayed." class="smslogos"/> 
         </a>
-        <a href="https://www.wattpad.com/user/KareenaNS">
+        <a href="https://www.wattpad.com/user/reena-ns">
           <img src="2.png" alt="This image cannot be displayed." class="smslogos"/> 
         </a>
         <a href="https://www.youtube.com/channel/UCB5_0GV17GqFb7YtmSkwgkw">
           <img src="3.png" alt="This image cannot be displayed." class="smslogos"/> 
         </a>
-        <a href="https://www.tiktok.com/@shethacoolie">
+        <a href="https://www.tiktok.com/@reenanswrites">
           <img src="4.png" alt="This image cannot be displayed." class="smslogos"/> 
         </a>
 
