Added software developer position at City of Morrow.

--- a/student.html
+++ b/student.html
@@ -161,6 +161,20 @@
 
     <h2 class="subsection">Experience</h2>
     <div class="cont-contain">
+      <a href="https://morrowga.gov/"
+        >City of Morrow (May 2024 - Current)</a
+      >
+    </div>
+    <p class="blah">Software Developer</p>
+    <ul>
+      <li>
+        Helped code an app to compile events occuring in the city of Morrow in a calendar-style scheduling system.
+      </li>
+      <li>
+        Assisted in IT development. 
+      </li>
+    </ul>
+    <div class="cont-contain">
       <a href="https://www.publix.com/locations/547-eagles-landing"
         >Publix Supermarkets Inc. (Jul 2022 - Jan 2023)</a
       >
@@ -169,11 +183,11 @@
     <ul>
       <li>
         Leveraged POS system to perform purchase transactions for team members
-        and customers
+        and customers.
       </li>
       <li>
         Greeted and informed customers of products, fostering positive store
-        experiences
+        experiences.
       </li>
     </ul>
     <div class="cont-contain">
