--- a/student.html
+++ b/student.html
@@ -48,7 +48,7 @@
     <p class="blah">BS in Computer Science</p>
     <ul>
       <li>
-        Relevant Coursework: Object Oriented Programming, Data Structures and Algorithms, Discrete Mathematics, Objects and Design, Computer Graphics, Intro to UI/Design, Junior Capstone
+        Relevant Coursework: Computer Animation, Video Game Design, Object Oriented Programming, Data Structures and Algorithms, Discrete Mathematics, Objects and Design, Computer Graphics, Intro to UI/Design, Junior Capstone
       </li>
       <li>
         Extracurriculars: Caribbean Student Association, VGDev, RUF (Reformed University Fellowship), Startup Exchange
@@ -97,15 +97,31 @@
     <h2 class="subsection">Projects</h2>
     <ul>
       <li>
-        <p class="italics">LOST: An app for grieving students (Jan 2024 - Current)</p>
+        <p class="italics">WasteWise (Sept 2024 - Dec 2024)</p>
         <ol>
           <li>
-            Web/Mobile Developer, founder: Creator of an app with resources for students dealing with loss, as well as an anonymous chat feature.
+            Web/Mobile Developer, founder: Creator of an app, primarily coded using Python, for local 
+            governments to track their residents' trash collection.
           </li>
         </ol>
       </li>
       <li>
-        <p class="italics">Personal Website (June 2023 - Current)</p>
+        <p class="italics">QualPat (Aug - Dec 2024)</p>
+        <ol>
+          <li>
+            Backend developer: completed backend development for this project assigned by our client at Google
+          </li>
+          <li>
+            Coded a results and history page in which each user is a collection in Firebase, 
+            and each has their own file_upload and string_upload collection that is returned specific for the user.
+          </li>
+          <li>
+            Implemented Gemini LLM on backend to return a sentiment analysis of a conversation transcript to a user.
+          </li>
+        </ol>
+      </li>
+      <li>
+        <p class="italics">Personal Website (Jun 2023 - Current)</p>
         <ol>
           <li>
             Frontend Developer: Coded a personal website for both my writing and
@@ -165,13 +181,25 @@
         >City of Morrow (May 2024 - Current)</a
       >
     </div>
-    <p class="blah">Software Developer</p>
+    <p class="blah">IT Department</p>
     <ul>
       <li>
-        Helped code an app to compile events occuring in the city of Morrow in a calendar-style scheduling system.
+        Coded an app to track residents' trash collection. Learn more about WasteWise <a href="https://github.com/KareenaNS/Sanitation-Trash-Pickup" target="_blank" rel="noopener noreferrer">here.</a>
       </li>
       <li>
-        Assisted in IT development. 
+        Maintained network infrastructure for a mid-sized organization, ensuring optimal performance and security.
+      </li>
+      <li>
+        Provided technical support for hardware and software issues to over 100 users.
+      </li>
+      <li>
+        Resolved system outages and application errors by diagnosing issues and implementing solutions.
+      </li>
+      <li>
+        Took the lead on all AV during events, including LED screens, audio, and lights.
+      </li>
+      <li>
+        Social media marketing and graphic design on Instagram and Facebook.
       </li>
     </ul>
     <div class="cont-contain">
