finished content creator page

--- a/author.html
+++ b/author.html
@@ -20,7 +20,7 @@
           <li><a href="#bottom">Socials</a>
         </ul>
       </nav>
-      <img src="logo.jpg" alt="This image cannot be displayed." width="150" class="logoimage rounded-img" height="150" onclick="myFunction()" height="150"/>
+      <img src="headshot.jpeg" alt="This image cannot be displayed." width="150" class="logoimage rounded-img" height="150" onclick="myFunction()" height="150"/>
       <p class="imageclick">(click on the image above)</p>
       <div class="popup" onclick="myFunction()">
         <span class="popuptext" id="myPopup">Kareena NS is an aspiring author. Scroll to learn more.</span>
