--- a/content.html
+++ b/content.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <title>Kareena NS</title>
@@ -25,4 +25,65 @@
         <a href="mailto:reena.narinesingh@gmail.com">Email</a>
     </div>
   </body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html class="content">
+  <head>
+    <title>Content Creator</title>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="icon" type="image/png" href="N.png">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  </head>
+  <body>
+    <div class="body2">
+      <nav class="navbar" style="position: fixed; 
+      top: 0; 
+      left: 0; 
+      width: 100%;">
+        <div class="names">Kareena NS</div>
+        <ul>
+          <li><a href="author.html">Writer</a></li>
+          <li><a href="index.html">Coder</a>
+          <li><a href="mailto:reena.narinesingh@gmail.com">Email</a></li>
+        </ul>
+      </nav>  
+      <div class="white-box">
+        <h1>CONTENT CREATOR</h1>
+        <div class="contented"> 
+          <img src="headshot.jpeg" alt="Your Profile Picture" style="border-radius: 50%; margin-top: 20px; display: block; margin-left: auto; margin-right: auto;">
+
+          <h1>Reena NS</h1>
+          <h2 style="text-align: center; margin: 0 auto; display: block;">Content Creator, TikTok Maker, Photo Taker, Late-Night Snacker</h2>
+
+          <p style="text-align: center; margin: 0 auto; display: block; margin-top: 25px; margin-bottom: 50px;">
+            Just an island girl who makes funny videos, takes photos, and codes! Follow me on my socials for more! If you're interested, check out one of the services I offer below. If you are interested, reach out to me via email from the link in the navigation bar at the top of this page. 
+          </p>
+
+          <h2 style="text-align: center; margin: 0 auto; display: block;">Services Offered:</h2>
+          <ul style="text-align: center; margin: 0 auto; display: block; list-style-position: inside;">
+            <li style="font-size: 18px; line-height: 1.6; margin: 10px 0; color: #555;">Photography Session</li>
+            <li style="font-size: 18px; line-height: 1.6; margin: 10px 0; color: #555;">Social Media Content</li>
+            <li style="font-size: 18px; line-height: 1.6; margin: 10px 0; color: #555;">Custom-Made Websites</li>
+          </ul>          
+      </div> 
+  </div>
+
+
+  <div id="foot"> <h2 class="names">Socials</h2>
+    <div class="linksBottom">
+      <a href="https://www.instagram.com/reena_ns/">
+        <img src="1.png" alt="Instagram" class="smslogos"/> 
+      </a>
+      <a href="https://www.youtube.com/@reena_ns">
+        <img src="3.png" alt="Youtube" class="smslogos"/> 
+      </a>
+      <a href="https://www.tiktok.com/@shethacoolie">
+        <img src="4.png" alt="TikTok" class="smslogos"/> 
+      </a>
+    </div>
+  </div> 
+
+</body>
 </html>
